# bhopengraph

./: .readthedocs.yml  MANIFEST.in  Makefile  README.md  icons.json  pyproject.toml  setup.py
.github/workflows/: release-tests.yml  simple-tests.yml  tests.yml
bhopengraph/: BloodHoundClient.py  Edge.py  Logger.py  Node.py  OpenGraph.py  Properties.py  __init__.py  __main__.py  __version__.py  utils.py
bhopengraph/tests/: run_tests.py  test_BloodHoundClient.py  test_Edge.py  test_Node.py  test_OpenGraph.py  test_Properties.py
bhopengraph/tests/datasets/: generate.py
docs/: bhopengraph.html  conf.py  contributing.rst  index.html  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: BloodHoundClient.rst  Edge.rst  Logger.rst  Node.rst  OpenGraph.rst  Properties.rst  index.rst  utils.rst
docs/bhopengraph/: Edge.html  Node.html  Properties.html
docs/examples/: index.rst  uploading_graphs.rst
documentation/: search.js
documentation/bhopengraph/: OpenGraph.html
examples/: 01_simple_path_finding.py  02_node_types_and_properties.py  03_edge_operations.py  04_graph_analysis.py  05_upload_graph.py  advanced_features.py  example_upload.json  minimal_working_json.py
