[project]
name = "bhopengraph"
version = "1.3.1"
description = "A python library to create BloodHound OpenGraphs easily"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "p0dalirius" }
]
dependencies = [
]

[tool.poetry.scripts]
bhopengraph = "bhopengraph.__main__:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
